# wikimedia_yard_reaas_test

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml  ci.yml
docs/: index.md  todo.md
docs/css/: mkdocstrings.css
docs/getting_started/: LICENSE.md  installation.md
examples/: analysis_italian_table.ipynb  con.py  example_bronze_step.py  example_db_creation.py  example_diversity_stickiness_weekend_highlight.py  example_file_download.py  example_gold_step.py  example_hello_world.py  example_kpi.py  example_medallion_arch.py  example_platinum_step.py  example_silver_step.py  example_solving_seseasonality.py  example_solving_sparsity.py  example_stickiness_weekend_highlight.py  example_train_model.py  example_variance_of_the_top_five_pages.py  test.py  top_10_vs_top_100_dominance_per_day.py
getting_started/CODE_OF_CONDUCT/: index.html
getting_started/CONTRIBUTING/: index.html
getting_started/LICENSE/: index.html
getting_started/installation/: index.html
my_py_template/: hello_word.py
search/: search_index.json
tests/my_py_template/: test_hello_world.py
todo/: index.html
wikimedia_yard_reaas_test/: cleaning_pipeline.py  data_quirks.py  filters.py  kpis.py  maps.py  train_and_evaluate_functions.py  utils.py
